[package]
name = "crypto-msg-parser-ffi"
version = "1.7.9"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
crypto-msg-parser = "1.7.9"
crypto-market-type = "1.0.5"
crypto-msg-type = "1.0.3"
serde_json = "1"

[dev-dependencies]
float-cmp = "0.9.0"

[build-dependencies]
cbindgen = "0.20.0"

[profile.release]
lto = true
codegen-units = 1
