[package]
name = "crypto-msg-parser-ffi"
version = "2.1.1"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
crypto-msg-parser = "2.1.1"
crypto-market-type = "1.0.9"
crypto-msg-type = "1.0.6"
serde_json = "1.0.81"

[dev-dependencies]
float-cmp = "0.9.0"

[build-dependencies]
cbindgen = "0.23.0"

[profile.release]
lto = true
codegen-units = 1
