[package]
name = "crypto-msg-parser-ffi"
version = "0.0.1"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
crypto-market-type = "1.1.5"
crypto-message = "1.1.16"
crypto-msg-parser = "2.8.16"
crypto-msg-type = "1.0.11"
serde_json = "1.0.91"

[dev-dependencies]
float-cmp = "0.9.0"

[build-dependencies]
cbindgen = "0.24.3"

[profile.release]
lto = true
codegen-units = 1
